# AdskEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: resources.qrc
assets/models/: cone.fbx  cube.fbx  cylinder.fbx  sphere.fbx
projects/testProj/: testProj.json
projects/testProj/scenes/: testScene.scene
src/: main.cpp
src/components/: BoxColliderComponent.cpp  BoxColliderComponent.h  Light.cpp  Light.h  MeshRenderer.cpp  MeshRenderer.h  RigidBodyComponent.cpp  RigidBodyComponent.h  SphereColliderComponent.cpp  SphereColliderComponent.h  Transform.cpp  Transform.h
src/core/: ColliderComponent.h  Component.h  Cube.cpp  Cube.h  Entity.h  Light.cpp  Light.h  PhysicsSystem.cpp  PhysicsSystem.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneObject.h
src/editor/: EditorWindow.cpp  EditorWindow.h  WelcomeWindow.cpp  WelcomeWindow.h
src/enum/: adskLogsEnums.h  dragAxis.h
src/graphics/: EnvironmentSettingsWindow.cpp  EnvironmentSettingsWindow.h  Viewport.cpp  Viewport.h
src/render/: skybox.cpp  skybox.h
src/styles/: dark.qss
src/ui/: ConsolePanel.cpp  ConsolePanel.h  ProjectPanel.cpp  ProjectPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  Toolbar.cpp  Toolbar.h
